--- a/style.css
+++ b/style.css
@@ -90,61 +90,16 @@ body {
   font-size: clamp(1rem, 10vw, 48px);
   line-height: 1.5;
   color: #ffffff;
+  text-align: center;
 
   text-shadow:
    0.05em 0 0 rgba(255, 0, 0, 0.75),
    -0.025em -0.05em 0 rgba(0, 255, 0, 0.75),
    0.025em 0.05 0 rgba(0, 0, 255, 0.75);
 
-  /* animation: glitch 750ms infinite */
 
 }
 
-@keyframes glitch {
-  0% {
-    text-shadow:
-    0.05em 0 0 rgba(255, 0, 0, 0.75),
-    -0.025em -0.05em 0 rgba(0, 255, 0, 0.75),
-    0.025em 0.05 0 rgba(0, 0, 255, 0.75);
-  }
-  14% {
-    text-shadow:
-    0.05em 0 0 rgba(255, 0, 0, 0.75),
-    -0.025em -0.05em 0 rgba(0, 255, 0, 0.75),
-    0.025em 0.05 0 rgba(0, 0, 255, 0.75);
-  }
-  15% {
-    text-shadow:
-    0.05em 0 0 rgba(255, 0, 0, 0.75),
-    -0.025em -0.05em 0 rgba(0, 255, 0, 0.75),
-    0.025em 0.05 0 rgba(0, 0, 255, 0.75);
-  }
-  49% {
-    text-shadow:
-    0.05em 0 0 rgba(255, 0, 0, 0.75),
-    -0.025em -0.05em 0 rgba(0, 255, 0, 0.75),
-    0.025em 0.05 0 rgba(0, 0, 255, 0.75);
-  }
-  50% {
-    text-shadow:
-    0.05em 0 0 rgba(255, 0, 0, 0.75),
-    -0.025em -0.05em 0 rgba(0, 255, 0, 0.75),
-    0.025em 0.05 0 rgba(0, 0, 255, 0.75);
-  }
-  99% {
-    text-shadow:
-    0.05em 0 0 rgba(255, 0, 0, 0.75),
-    -0.025em -0.05em 0 rgba(0, 255, 0, 0.75),
-    0.025em 0.05 0 rgba(0, 0, 255, 0.75);
-  }
-  100% {
-    text-shadow:
-    0.05em 0 0 rgba(255, 0, 0, 0.75),
-    -0.025em -0.05em 0 rgba(0, 255, 0, 0.75),
-    0.025em 0.05 0 rgba(0, 0, 255, 0.75);
-  }
-
-}
 
 .left-section{
   font-family: Bebas Neue;
