--- a/style.css
+++ b/style.css
@@ -92,16 +92,18 @@ body {
   line-height: 1.5;
   color: #ffffff;
   text-align: center;
+  margin-bottom: 0.75rem;
 }
 
 
-.left-section{
+.top-section{
   font-family: Bebas Neue;
   font-style: normal;
   font-weight: normal;
   font-size: 24px;
   line-height: 29px;
   text-align: center;
+  margin-bottom: 1rem;
 
   color: var(--clr-icons-text);
 
@@ -112,8 +114,7 @@ body {
   border-radius: 250px;
   display: block;
   margin: auto;
-  margin-bottom: 1em;
-  margin-top: 1em;
+  margin-bottom: 2rem;
   
   left: 0;
   right: 0;
@@ -129,5 +130,12 @@ body {
 }
 
 .links {
-  margin: 
+  text-align: center;
+  margin-bottom: 2rem;
+}
+
+.bottom-section {
+  text-align: center;
+  color: #ffffff;
+  text-decoration: none;
 }
