--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@ body {
 }
 
 
-.top-section{
+.top-section {
   font-family: Bebas Neue;
   font-style: normal;
   font-weight: normal;
@@ -104,6 +104,7 @@ body {
   line-height: 29px;
   text-align: center;
   margin-bottom: 1rem;
+  letter-spacing: 1.2px;
 
   color: var(--clr-icons-text);
 
