--- a/style.css
+++ b/style.css
@@ -25,10 +25,15 @@ ol[role="list"] {
   list-style: none;
 }
 
+::-webkit-scrollbar {
+  display: none;
+}
+
 /* Set core root defaults */
 html {
   scroll-behavior: smooth;
-}
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */}
 
 /* Set core body defaults */
 body {
@@ -83,7 +88,6 @@ body {
   margin: 1em;
   background-color: var(--clr-bg);
   line-height: 1.5;
-  overflow: hidden;
 }
 
 
